--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       }
 
       .permission-button,
-      .pause-button {
+      .pause-button .shoot-button {
         position: absolute;
         top: 50%;
         left: 50%;
@@ -43,6 +43,12 @@
         left: 90%;
         transform: translate(-50%, -50%);
       }
+
+      .shoot-button {
+        top: 90%;
+        left: 10%;
+        transform: translate(-50%, -50%);
+      }
     </style>
   </head>
   <body>
@@ -59,6 +65,9 @@
     <button id="pauseButton" class="pause-button" style="display: none">
       Pause
     </button>
+    <button id="shootButton" class="shoot-button" style="display: block">
+      Shoot
+    </button>
 
     <script>
       const canvas = document.getElementById("gameCanvas");
@@ -70,6 +79,7 @@
       const pauseText = document.getElementById("pauseText");
       const permissionButton = document.getElementById("permissionButton");
       const pauseButton = document.getElementById("pauseButton");
+      const shootButton = document.getElementById("shootButton");
 
       const player = {
         x: canvas.width / 2,
@@ -81,6 +91,10 @@
 
       const zombies = [];
       const zombieSpeed = 2;
+
+      const bullets = [];
+      const bulletSpeed = 10;
+
       let tiltX = 0;
       let tiltY = 0;
       let controlMode = "none"; // 'accelerometer' or 'mouse'
@@ -296,9 +310,77 @@
         });
       }
 
+      function shootBullets() {
+        if (paused) return;
+
+        // Generate 3 bullets with spread
+        const spread = Math.PI / 12; // Spread angle for shotgun
+        const baseAngle = Math.atan2(player.direction.y, player.direction.x);
+
+        for (let i = -1; i <= 1; i++) {
+          bullets.push({
+            x: player.x,
+            y: player.y,
+            direction: {
+              x: Math.cos(baseAngle + i * spread),
+              y: Math.sin(baseAngle + i * spread),
+            },
+            radius: 5,
+            color: "yellow",
+          });
+        }
+      }
+
+      function drawBullets() {
+        bullets.forEach((bullet) => {
+          ctx.beginPath();
+          ctx.arc(bullet.x, bullet.y, bullet.radius, 0, Math.PI * 2);
+          ctx.fillStyle = bullet.color;
+          ctx.fill();
+          ctx.closePath();
+        });
+      }
+
+      function updateBullets() {
+        for (let i = bullets.length - 1; i >= 0; i--) {
+          const bullet = bullets[i];
+          bullet.x += bullet.direction.x * bulletSpeed;
+          bullet.y += bullet.direction.y * bulletSpeed;
+
+          // Remove bullets that go out of bounds
+          if (
+            bullet.x < 0 ||
+            bullet.x > canvas.width ||
+            bullet.y < 0 ||
+            bullet.y > canvas.height
+          ) {
+            bullets.splice(i, 1);
+          }
+        }
+      }
+
       function checkCollisions() {
         if (paused) return;
 
+        // Check bullet-zombie collisions
+        for (let i = zombies.length - 1; i >= 0; i--) {
+          const zombie = zombies[i];
+
+          for (let j = bullets.length - 1; j >= 0; j--) {
+            const bullet = bullets[j];
+            const dx = zombie.x - bullet.x;
+            const dy = zombie.y - bullet.y;
+            const dist = Math.sqrt(dx * dx + dy * dy);
+
+            if (dist < zombie.radius + bullet.radius) {
+              zombies.splice(i, 1);
+              bullets.splice(j, 1);
+              break;
+            }
+          }
+        }
+
+        // Check player-zombie collisions
         zombies.forEach((zombie, index) => {
           const dx = player.x - zombie.x;
           const dy = player.y - zombie.y;
@@ -315,6 +397,7 @@
         player.x = canvas.width / 2;
         player.y = canvas.height / 2;
         zombies.length = 0;
+        bullets.length = 0;
       }
 
       function gameLoop() {
@@ -325,6 +408,8 @@
           updatePlayer();
           drawZombies();
           updateZombies();
+          drawBullets();
+          updateBullets();
           checkCollisions();
         }
 
@@ -335,6 +420,10 @@
         paused = !paused;
         pauseButton.textContent = paused ? "Resume" : "Pause";
       }
+
+      document.addEventListener("click", shootBullets);
+
+      shootButton.addEventListener("click", shootBullets);
 
       pauseButton.addEventListener("click", togglePause);
 
